@@ -1,16 +1,19 @@
 package run.halo.app.infra;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 import java.net.MalformedURLException;
 import java.net.URI;
+import java.net.URL;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.boot.autoconfigure.web.reactive.WebFluxProperties;
 import org.springframework.http.HttpRequest;
 import run.halo.app.infra.properties.HaloProperties;
 
@@ -19,6 +22,9 @@ class HaloPropertiesExternalUrlSupplierTest {
 
     @Mock
     HaloProperties haloProperties;
+
+    @Mock
+    WebFluxProperties webFluxProperties;
 
     @InjectMocks
     HaloPropertiesExternalUrlSupplier externalUrl;
@@ -31,6 +37,25 @@ class HaloPropertiesExternalUrlSupplierTest {
 
         assertEquals(fakeUri, externalUrl.get());
     }
+
+    @Test
+    void getURIWhenBasePathSetAndNotUsingAbsolutePermalink() throws MalformedURLException {
+        when(webFluxProperties.getBasePath()).thenReturn("/blog");
+        when(haloProperties.isUseAbsolutePermalink()).thenReturn(false);
+
+        assertEquals(URI.create("/blog"), externalUrl.get());
+    }
+
+    @Test
+    void getURIWhenBasePathSetAndUsingAbsolutePermalink() throws MalformedURLException {
+        var fakeUri = URI.create("https://halo.run/fake");
+        when(haloProperties.getExternalUrl()).thenReturn(fakeUri.toURL());
+        lenient().when(webFluxProperties.getBasePath()).thenReturn("/blog");
+        when(haloProperties.isUseAbsolutePermalink()).thenReturn(true);
+
+        assertEquals(URI.create("https://halo.run/fake"), externalUrl.get());
+    }
+
 
     @Test
     void getURIWhenUsingRelativePermalink() throws MalformedURLException {
@@ -55,6 +80,29 @@ class HaloPropertiesExternalUrlSupplierTest {
         var mockRequest = mock(HttpRequest.class);
         when(mockRequest.getURI()).thenReturn(fakeUri);
         var url = externalUrl.getURL(mockRequest);
-        assertEquals(fakeUri.toURL(), url);
+        assertEquals(new URL("https://localhost/"), url);
     }
+
+    @Test
+    void getURLWhenBasePathSetAndExternalURLProvided() throws MalformedURLException {
+        var fakeUri = URI.create("https://localhost/fake");
+        when(haloProperties.getExternalUrl()).thenReturn(fakeUri.toURL());
+        lenient().when(webFluxProperties.getBasePath()).thenReturn("/blog");
+        var mockRequest = mock(HttpRequest.class);
+        lenient().when(mockRequest.getURI()).thenReturn(fakeUri);
+        var url = externalUrl.getURL(mockRequest);
+        assertEquals(new URL("https://localhost/fake"), url);
+    }
+
+    @Test
+    void getURLWhenBasePathSetAndExternalURLAbsent() throws MalformedURLException {
+        var fakeUri = URI.create("https://localhost/fake");
+        when(haloProperties.getExternalUrl()).thenReturn(null);
+        when(webFluxProperties.getBasePath()).thenReturn("/blog");
+        var mockRequest = mock(HttpRequest.class);
+        when(mockRequest.getURI()).thenReturn(fakeUri);
+        var url = externalUrl.getURL(mockRequest);
+        assertEquals(new URL("https://localhost/blog"), url);
+    }
+
 }
